--- a/style.css
+++ b/style.css
@@ -1,7 +1,120 @@
+:root {
+    --main-background-color: #07575B; /* Deep Ocean Blue */
+    --hover-color: #0E7E87; /* Dark Aqua */
+    --button-background-color: #3E9AA8; /* Turquoise Blue */
+    --button-border-color: #1F3D44; /* Dark Teal */
+    --header-color: #92CAD1; /* Light Aqua */
+    --movie-item-background: #166678; /* Dark Ocean Blue */
+    --remove-button-color: #C94D4D; /* Coral Red */
+    --popup-background-color: #1E2A2F; /* Dark Slate */
+    --popup-border-color: #457385; /* Sea Blue */
+    --text-color: #E6EFEF; /* Ivory White */
+}
+
+
+
+/* Rest of your CSS using these variables */
+body {
+    background-color: var(--main-background-color);
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+
 .movieItem {
     cursor: pointer;
 }
 
 .movieItem:hover {
-    background-color: rgb(83, 161, 200); /* Change the background color on hover */
+    background-color: var(--hover-color);
+}
+
+.button {
+    background-color: var(--button-background-color);
+    border: none;
+    color: white;
+    padding: 2px 5px;
+    margin: 1px 1px;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: var(--button-border-color);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 25px;
+    cursor: pointer;
+}
+
+.header {
+    text-align: center;
+    margin-bottom: 20px;
+    color: var(--header-color);
+    font-size: 25px;
+}
+
+.input-container {
+    text-align: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+#movieInput {
+    margin-right: 10px;
+}
+
+#movieList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.movieItem {
+    background-color: var(--accent-color-2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid var(--popup-border-color);
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 30px;
+}
+
+.removeButton {
+    background-color: var(--remove-button-color);
+    color: var(--text-color);
+    padding: 2px 5px;
+    border-radius: 0 5px 0 5px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+#selectButton {
+    margin-top: 10px;
+    padding: 5px 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+}
+
+#popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: var(--popup-background-color);
+    border: 1px solid var(--popup-border-color);
+    border-radius: 5px;
+    z-index: 1000;
+    font-size: 25px;
+}
+
+#popupClose {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
 }
